CompiladorPedroParser.py
# Generated from CompiladorPedro.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiladorPedroParser ( Parser ):

    grammarFileName = "CompiladorPedro.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'='", "'('", "')'", "'+'", 
                     "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'begin'", "'end'", "'int'", "'float'", 
                     "'string'", "'input'", "'output'", "'if'", "'then'", 
                     "'else'", "'endif'", "'while'", "'do'", "'endwhile'", 
                     "'for'", "'to'", "'endfor'", "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BEGIN", "END", "INT", "FLOAT", "STRING", "INPUT", 
                      "OUTPUT", "IF", "THEN", "ELSE", "ENDIF", "WHILE", 
                      "DO", "ENDWHILE", "FOR", "TO", "ENDFOR", "AND", "OR", 
                      "NOT", "ID", "NUM", "WS" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_comandos = 2
    RULE_declaracao = 3
    RULE_comando = 4
    RULE_atribuicao = 5
    RULE_entrada = 6
    RULE_saida = 7
    RULE_condicional = 8
    RULE_repeticao = 9
    RULE_expressao_aritmetica = 10
    RULE_expressao_multiplicativa = 11
    RULE_expressao_unaria = 12
    RULE_expressao_logica = 13
    RULE_operador_relacional = 14
    RULE_operador_logico = 15
    RULE_erro_comando = 16

    ruleNames =  [ "programa", "declaracoes", "comandos", "declaracao", 
                   "comando", "atribuicao", "entrada", "saida", "condicional", 
                   "repeticao", "expressao_aritmetica", "expressao_multiplicativa", 
                   "expressao_unaria", "expressao_logica", "operador_relacional", 
                   "operador_logico", "erro_comando" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    BEGIN=16
    END=17
    INT=18
    FLOAT=19
    STRING=20
    INPUT=21
    OUTPUT=22
    IF=23
    THEN=24
    ELSE=25
    ENDIF=26
    WHILE=27
    DO=28
    ENDWHILE=29
    FOR=30
    TO=31
    ENDFOR=32
    AND=33
    OR=34
    NOT=35
    ID=36
    NUM=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(CompiladorPedroParser.BEGIN, 0)

        def END(self):
            return self.getToken(CompiladorPedroParser.END, 0)

        def declaracoes(self):
            return self.getTypedRuleContext(CompiladorPedroParser.DeclaracoesContext,0)


        def comandos(self):
            return self.getTypedRuleContext(CompiladorPedroParser.ComandosContext,0)


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = CompiladorPedroParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(CompiladorPedroParser.BEGIN)
            self.state = 36
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 35
                self.declaracoes()


            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 38
                self.comandos()


            self.state = 41
            self.match(CompiladorPedroParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorPedroParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(CompiladorPedroParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracoes" ):
                return visitor.visitDeclaracoes(self)
            else:
                return visitor.visitChildren(self)




    def declaracoes(self):

        localctx = CompiladorPedroParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 43
                    self.declaracao()

                else:
                    raise NoViableAltException(self)
                self.state = 46 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorPedroParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CompiladorPedroParser.ComandoContext,i)


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandos" ):
                return visitor.visitComandos(self)
            else:
                return visitor.visitChildren(self)




    def comandos(self):

        localctx = CompiladorPedroParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comandos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 48
                    self.comando()

                else:
                    raise NoViableAltException(self)
                self.state = 51 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorPedroParser.ID)
            else:
                return self.getToken(CompiladorPedroParser.ID, i)

        def INT(self):
            return self.getToken(CompiladorPedroParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CompiladorPedroParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(CompiladorPedroParser.STRING, 0)

        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = CompiladorPedroParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1835008) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 54
            self.match(CompiladorPedroParser.ID)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 55
                self.match(CompiladorPedroParser.T__0)
                self.state = 56
                self.match(CompiladorPedroParser.ID)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(CompiladorPedroParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_comando

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ComandoAtribuicaoContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CompiladorPedroParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atribuicao(self):
            return self.getTypedRuleContext(CompiladorPedroParser.AtribuicaoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoAtribuicao" ):
                listener.enterComandoAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoAtribuicao" ):
                listener.exitComandoAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoAtribuicao" ):
                return visitor.visitComandoAtribuicao(self)
            else:
                return visitor.visitChildren(self)


    class ComandoEntradaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CompiladorPedroParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entrada(self):
            return self.getTypedRuleContext(CompiladorPedroParser.EntradaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoEntrada" ):
                listener.enterComandoEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoEntrada" ):
                listener.exitComandoEntrada(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoEntrada" ):
                return visitor.visitComandoEntrada(self)
            else:
                return visitor.visitChildren(self)


    class ComandoCondicionalContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CompiladorPedroParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicional(self):
            return self.getTypedRuleContext(CompiladorPedroParser.CondicionalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoCondicional" ):
                listener.enterComandoCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoCondicional" ):
                listener.exitComandoCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoCondicional" ):
                return visitor.visitComandoCondicional(self)
            else:
                return visitor.visitChildren(self)


    class ComandoErroContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CompiladorPedroParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def erro_comando(self):
            return self.getTypedRuleContext(CompiladorPedroParser.Erro_comandoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoErro" ):
                listener.enterComandoErro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoErro" ):
                listener.exitComandoErro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoErro" ):
                return visitor.visitComandoErro(self)
            else:
                return visitor.visitChildren(self)


    class ComandoSaidaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CompiladorPedroParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def saida(self):
            return self.getTypedRuleContext(CompiladorPedroParser.SaidaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoSaida" ):
                listener.enterComandoSaida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoSaida" ):
                listener.exitComandoSaida(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoSaida" ):
                return visitor.visitComandoSaida(self)
            else:
                return visitor.visitChildren(self)


    class ComandoRepeticaoContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CompiladorPedroParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def repeticao(self):
            return self.getTypedRuleContext(CompiladorPedroParser.RepeticaoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoRepeticao" ):
                listener.enterComandoRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoRepeticao" ):
                listener.exitComandoRepeticao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoRepeticao" ):
                return visitor.visitComandoRepeticao(self)
            else:
                return visitor.visitChildren(self)



    def comando(self):

        localctx = CompiladorPedroParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comando)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = CompiladorPedroParser.ComandoAtribuicaoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.atribuicao()
                pass

            elif la_ == 2:
                localctx = CompiladorPedroParser.ComandoEntradaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.entrada()
                pass

            elif la_ == 3:
                localctx = CompiladorPedroParser.ComandoSaidaContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.saida()
                pass

            elif la_ == 4:
                localctx = CompiladorPedroParser.ComandoCondicionalContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.condicional()
                pass

            elif la_ == 5:
                localctx = CompiladorPedroParser.ComandoRepeticaoContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.repeticao()
                pass

            elif la_ == 6:
                localctx = CompiladorPedroParser.ComandoErroContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.erro_comando()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompiladorPedroParser.ID, 0)

        def expressao_aritmetica(self):
            return self.getTypedRuleContext(CompiladorPedroParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = CompiladorPedroParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(CompiladorPedroParser.ID)
            self.state = 73
            self.match(CompiladorPedroParser.T__2)
            self.state = 74
            self.expressao_aritmetica()
            self.state = 75
            self.match(CompiladorPedroParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntradaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(CompiladorPedroParser.INPUT, 0)

        def ID(self):
            return self.getToken(CompiladorPedroParser.ID, 0)

        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntrada" ):
                return visitor.visitEntrada(self)
            else:
                return visitor.visitChildren(self)




    def entrada(self):

        localctx = CompiladorPedroParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_entrada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(CompiladorPedroParser.INPUT)
            self.state = 78
            self.match(CompiladorPedroParser.T__3)
            self.state = 79
            self.match(CompiladorPedroParser.ID)
            self.state = 80
            self.match(CompiladorPedroParser.T__4)
            self.state = 81
            self.match(CompiladorPedroParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT(self):
            return self.getToken(CompiladorPedroParser.OUTPUT, 0)

        def expressao_aritmetica(self):
            return self.getTypedRuleContext(CompiladorPedroParser.Expressao_aritmeticaContext,0)


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_saida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaida" ):
                listener.enterSaida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaida" ):
                listener.exitSaida(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSaida" ):
                return visitor.visitSaida(self)
            else:
                return visitor.visitChildren(self)




    def saida(self):

        localctx = CompiladorPedroParser.SaidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_saida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(CompiladorPedroParser.OUTPUT)
            self.state = 84
            self.match(CompiladorPedroParser.T__3)
            self.state = 85
            self.expressao_aritmetica()
            self.state = 86
            self.match(CompiladorPedroParser.T__4)
            self.state = 87
            self.match(CompiladorPedroParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CompiladorPedroParser.IF, 0)

        def expressao_logica(self):
            return self.getTypedRuleContext(CompiladorPedroParser.Expressao_logicaContext,0)


        def THEN(self):
            return self.getToken(CompiladorPedroParser.THEN, 0)

        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorPedroParser.ComandosContext)
            else:
                return self.getTypedRuleContext(CompiladorPedroParser.ComandosContext,i)


        def ENDIF(self):
            return self.getToken(CompiladorPedroParser.ENDIF, 0)

        def ELSE(self):
            return self.getToken(CompiladorPedroParser.ELSE, 0)

        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = CompiladorPedroParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(CompiladorPedroParser.IF)
            self.state = 90
            self.expressao_logica(0)
            self.state = 91
            self.match(CompiladorPedroParser.THEN)
            self.state = 92
            self.comandos()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 93
                self.match(CompiladorPedroParser.ELSE)
                self.state = 94
                self.comandos()


            self.state = 97
            self.match(CompiladorPedroParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CompiladorPedroParser.WHILE, 0)

        def expressao_logica(self):
            return self.getTypedRuleContext(CompiladorPedroParser.Expressao_logicaContext,0)


        def DO(self):
            return self.getToken(CompiladorPedroParser.DO, 0)

        def comandos(self):
            return self.getTypedRuleContext(CompiladorPedroParser.ComandosContext,0)


        def ENDWHILE(self):
            return self.getToken(CompiladorPedroParser.ENDWHILE, 0)

        def FOR(self):
            return self.getToken(CompiladorPedroParser.FOR, 0)

        def ID(self):
            return self.getToken(CompiladorPedroParser.ID, 0)

        def expressao_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorPedroParser.Expressao_aritmeticaContext)
            else:
                return self.getTypedRuleContext(CompiladorPedroParser.Expressao_aritmeticaContext,i)


        def TO(self):
            return self.getToken(CompiladorPedroParser.TO, 0)

        def ENDFOR(self):
            return self.getToken(CompiladorPedroParser.ENDFOR, 0)

        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeticao" ):
                listener.enterRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeticao" ):
                listener.exitRepeticao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeticao" ):
                return visitor.visitRepeticao(self)
            else:
                return visitor.visitChildren(self)




    def repeticao(self):

        localctx = CompiladorPedroParser.RepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_repeticao)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(CompiladorPedroParser.WHILE)
                self.state = 100
                self.expressao_logica(0)
                self.state = 101
                self.match(CompiladorPedroParser.DO)
                self.state = 102
                self.comandos()
                self.state = 103
                self.match(CompiladorPedroParser.ENDWHILE)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(CompiladorPedroParser.FOR)
                self.state = 106
                self.match(CompiladorPedroParser.ID)
                self.state = 107
                self.match(CompiladorPedroParser.T__2)
                self.state = 108
                self.expressao_aritmetica()
                self.state = 109
                self.match(CompiladorPedroParser.TO)
                self.state = 110
                self.expressao_aritmetica()
                self.state = 111
                self.match(CompiladorPedroParser.DO)
                self.state = 112
                self.comandos()
                self.state = 113
                self.match(CompiladorPedroParser.ENDFOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_aritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_multiplicativa(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorPedroParser.Expressao_multiplicativaContext)
            else:
                return self.getTypedRuleContext(CompiladorPedroParser.Expressao_multiplicativaContext,i)


        def getRuleIndex(self):
            return CompiladorPedroParser.RULE_expressao_aritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_aritmetica" ):
                listener.enterExpressao_aritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_aritmetica" ):
                listener.exitExpressao_aritmetica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao_aritmetica" ):
                return visitor.visitExpressao_aritmetica(self)
            else:
                return visitor.visitChildren(self)




    def expressao_aritmetica(self):

        localctx = CompiladorPedroParser.Expressao_aritmeticaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressao_aritmetica)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.expressao_multiplicativa()
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 122
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [6]:
                        self.state = 118
                        self.match(CompiladorPedroParser.T__5)
                        self.state = 119
                        self.expressao_multiplicativa()
                        pass
                    elif token in [7]:
                        self.state = 120
                        self.match(CompiladorPedroParser.T__6)
                        self.state = 121
                        self.expressao_multiplicativa()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_multiplicativaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

